# viewfinder

./: .gitignore  CMakeLists.txt  README.md  build.bat  generate_icon.ps1  installer.iss  main.cpp  resources.rc
